Google Maps setup

--- a/Fahrradverleih_MN/WebContent/product.css
+++ b/Fahrradverleih_MN/WebContent/product.css
@@ -87,6 +87,30 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 }
+
+.bgimg4 {
+	background-image: url("ContactPicture.jpg");
+	height: 500px;
+	position: relative;
+	overflow: hidden;
+	padding: 3rem;
+	margin-right: 1rem;
+	text-align: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.bigDiv {
+	background-color: white;
+	height: 550px;
+	position: relative;
+	overflow: hidden;
+	padding: 3rem;
+	margin: 0rem;
+	text-align: center;
+	width: 100%;
+}
+
 .bg-lightGrey {
 	background-color: #f3f3f3;
 }
@@ -96,8 +120,8 @@
 	font-size: 1.25rem;
 }
 
-.fontshadow {
-	color: white;
+.fontShadow {
+	color: white !important;
 	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
@@ -121,6 +145,10 @@
 	padding: 1rem;
 	margin: 1rem;
 	text-align: center;
+}
+
+.fontWhite {
+	color: white !important;
 }
 
 @import
