--- a/Fahrradverleih_MN/WebContent/product.css
+++ b/Fahrradverleih_MN/WebContent/product.css
@@ -106,6 +106,7 @@
 	position: relative;
 	overflow: hidden;
 	padding: 3rem;
+	padding-top: 1rem !important;
 	margin: 0rem;
 	text-align: center;
 	width: 100%;
@@ -143,6 +144,14 @@
 .textDiv {
 	position: relative;
 	padding: 1rem;
+	margin: 1rem;
+	text-align: center;
+}
+
+.textDiv2 {
+	position: relative;
+	padding: 1rem;
+	padding-bottom: 0rem !important;
 	margin: 1rem;
 	text-align: center;
 }
