--- a/Fahrradverleih_MN/WebContent/product.css
+++ b/Fahrradverleih_MN/WebContent/product.css
@@ -100,6 +100,18 @@
 	background-size: cover;
 }
 
+.bgimg5 {
+	background-image: url("ContactPicture2.jpg");
+	height: 400px;
+	position: relative;
+	overflow: hidden;
+	padding: 3rem;
+	margin-right: 1rem;
+	text-align: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
 .bigDiv {
 	background-color: white;
 	height: 550px;
@@ -131,6 +143,10 @@
 	margin-top: 2rem !important;
 	padding-left: 2rem !important;
 	padding-right: 2rem !important;
+}
+
+.topMargin {
+	margin-top: 3rem !important;
 }
 
 .height600px {
