--- a/Fahrradverleih_MN_PHP/style.css
+++ b/Fahrradverleih_MN_PHP/style.css
@@ -1,23 +1,21 @@
 * {
   margin: 0px;
   padding: 0px;
-}
-body {
-  font-size: 120%;
-  background: #F8F8FF;
+
 }
 
 .header {
   width: 30%;
   margin: 50px auto 0px;
   color: white;
-  background: #5F9EA0;
+  background: #000000;
   text-align: center;
   border: 1px solid #B0C4DE;
   border-bottom: none;
   border-radius: 10px 10px 0px 0px;
   padding: 20px;
 }
+
 form, .content {
   width: 30%;
   margin: 0px auto;
@@ -45,9 +43,9 @@ form, .content {
 .btn {
   padding: 10px;
   font-size: 15px;
-  color: white;
-  background: #5F9EA0;
-  border: none;
+  color: black;
+  background: #FFFFFF;
+  border: 1px solid grey;
   border-radius: 5px;
 }
 .error {
