--- a/Fahrradverleih_MN_PHP/style.css
+++ b/Fahrradverleih_MN_PHP/style.css
@@ -40,7 +40,7 @@ form, .content {
   border-radius: 5px;
   border: 1px solid gray;
 }
-.btn {
+.btn2 {
   padding: 10px;
   font-size: 15px;
   color: black;
