--- a/Fahrradverleih_MN/WebContent/product.css
+++ b/Fahrradverleih_MN/WebContent/product.css
@@ -296,8 +296,29 @@
 	text-align: center;
 }
 
+.textDiv5 {
+	position: relative;
+	padding: 0rem;
+	margin: auto;
+	text-align: center;
+	width: 50%;
+}
+
+.textDiv6 {
+	position: relative;
+	padding: 0rem;
+	margin: auto;
+	margin-top: 1rem !important;
+	text-align: center;
+	width: 50%;
+}
+
 .fontWhite {
 	color: white !important;
+}
+
+.fett {
+	font-weight: bold;
 }
 
 #Bestandstabelle {
