--- a/Fahrradverleih_MN_PHP/product.css
+++ b/Fahrradverleih_MN_PHP/product.css
@@ -87,6 +87,21 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 }
+
+.bgimg13 {
+	background-image: url("LoginPicture.jpg");
+	position: relative;
+	overflow: hidden;
+	padding: 2rem;
+	margin: 1rem;
+	text-align: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.height300px {
+	height: 300px;
+}
 .bg-lightGrey {
 	background-color: #f3f3f3;
 }
